// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`passes through additional html attributes 1`] = `
"<input
  class="radio__control"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  htmlattributes="[object Object]"
  style="color:red"
  type="radio"
/>"
`;

exports[`passes through additional html attributes 2`] = `
"<span
  class="radio class1"
>
  <input
    class="radio__control"
    data-passed-through="true"
    data-testid="AttributePassthrough"
    htmlattributes="[object Object]"
    style="color:red"
    type="radio"
  />
  <span
    class="radio__icon"
    hidden=""
  >
    <svg
      aria-hidden="true"
      class="radio__unchecked icon icon--18"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 18 18"
      >
        <path
          clip-rule="evenodd"
          d="M9 18A9 9 0 1 1 9 0a9 9 0 0 1 0 18ZM9 1a8 8 0 1 0 0 16A8 8 0 0 0 9 1Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-radio-unchecked-18"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="radio__checked icon icon--18"
    >
      <symbol
        id="GENERATED-1"
        viewBox="0 0 18 18"
      >
        <path
          clip-rule="evenodd"
          d="M9 0a9 9 0 1 0 0 18A9 9 0 0 0 9 0Zm0 17A8 8 0 1 1 9 1a8 8 0 0 1 0 16Zm5-8A5 5 0 1 1 4 9a5 5 0 0 1 10 0Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-radio-checked-18"
      />
    </svg>
  </span>
</span>"
`;

exports[`renders default radio 1`] = `
"<input
  class="radio__control"
  type="radio"
/>"
`;

exports[`renders default radio 2`] = `
"<span
  class="radio"
>
  <input
    class="radio__control"
    type="radio"
  />
  <span
    class="radio__icon"
    hidden=""
  >
    <svg
      aria-hidden="true"
      class="radio__unchecked icon icon--18"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 18 18"
      >
        <path
          clip-rule="evenodd"
          d="M9 18A9 9 0 1 1 9 0a9 9 0 0 1 0 18ZM9 1a8 8 0 1 0 0 16A8 8 0 0 0 9 1Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-radio-unchecked-18"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="radio__checked icon icon--18"
    >
      <symbol
        id="GENERATED-1"
        viewBox="0 0 18 18"
      >
        <path
          clip-rule="evenodd"
          d="M9 0a9 9 0 1 0 0 18A9 9 0 0 0 9 0Zm0 17A8 8 0 1 1 9 1a8 8 0 0 1 0 16Zm5-8A5 5 0 1 1 4 9a5 5 0 0 1 10 0Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-radio-checked-18"
      />
    </svg>
  </span>
</span>"
`;

exports[`renders default radio 3`] = `
"<span
  class="radio__icon"
  hidden=""
>
  <svg
    aria-hidden="true"
    class="radio__unchecked icon icon--18"
  >
    <symbol
      id="GENERATED-0"
      viewBox="0 0 18 18"
    >
      <path
        clip-rule="evenodd"
        d="M9 18A9 9 0 1 1 9 0a9 9 0 0 1 0 18ZM9 1a8 8 0 1 0 0 16A8 8 0 0 0 9 1Z"
        fill-rule="evenodd"
      />
    </symbol>
    <use
      href="#icon-radio-unchecked-18"
    />
  </svg>
  <svg
    aria-hidden="true"
    class="radio__checked icon icon--18"
  >
    <symbol
      id="GENERATED-1"
      viewBox="0 0 18 18"
    >
      <path
        clip-rule="evenodd"
        d="M9 0a9 9 0 1 0 0 18A9 9 0 0 0 9 0Zm0 17A8 8 0 1 1 9 1a8 8 0 0 1 0 16Zm5-8A5 5 0 1 1 4 9a5 5 0 0 1 10 0Z"
        fill-rule="evenodd"
      />
    </symbol>
    <use
      href="#icon-radio-checked-18"
    />
  </svg>
</span>"
`;

exports[`renders disabled radio 1`] = `
"<input
  class="radio__control"
  disabled=""
  type="radio"
/>"
`;
